# claudecodetest1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_all.sh
benchmarks/: comparison_with_prior_work.md  experiment_protocol.md
cases/case1_ringbuffer/: CMakeLists.txt
cases/case1_ringbuffer/include/: ring_buffer.hpp
cases/case1_ringbuffer/tests/: test_ring_buffer.cpp
cases/case4_typelist/include/: typelist.hpp
cases/case4_typelist/tests/: test_typelist.cpp
cases/case5_stm32_gpio/include/: stm32_gpio.hpp
cases/case5_stm32_gpio/tests/: test_stm32_gpio.cpp
prompts/conversation_logs/: case1_ringbuffer.md  case4_typelist.md  case5_stm32_gpio.md
results/: de_aigc_rewrite_sections.md  screenshot_spec.md
